<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_device_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paired_device"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_device_conectivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_not_connected"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_notification_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/notification_received"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/text_speed_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/speed_data"
            android:textColor="#FFFFFF"
            android:textSize="100sp"
            android:visibility="visible" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_metric_imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/metric_imperial"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_sensor_temp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_temp_val"
                    android:textColor="@color/white"
                    android:layout_marginEnd="30dp"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/text_sensor_humi_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_humi_val"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:layout_marginStart="30dp"
                    tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/button_reset_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reset_notification" />
</LinearLayout>